--- a/notebooks/Training.ipynb
+++ b/notebooks/Training.ipynb
@@ -4950,7 +4950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 80,
    "id": "43d16b1d",
    "metadata": {},
    "outputs": [
@@ -4958,13 +4958,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_12947/3895466330.py:1: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
-      "  ckpt = torch.load(BEST_MODEL_PATH, map_location=DEVICE)\n"
+      "/tmp/ipykernel_12947/913213786.py:1: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  ckpt = torch.load(\"./OCR/Epoch-90 copy.pth\", map_location=DEVICE)\n"
      ]
     }
    ],
    "source": [
-    "ckpt = torch.load(BEST_MODEL_PATH, map_location=DEVICE)\n",
+    "ckpt = torch.load(\"./OCR/Epoch-90 copy.pth\", map_location=DEVICE)\n",
     "model.load_state_dict(ckpt[\"model_state\"])\n",
     "model.eval()\n",
     "\n",
@@ -4973,7 +4973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 81,
    "id": "d0488bd0",
    "metadata": {},
    "outputs": [
@@ -4988,7 +4988,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 7/1948 [00:00<00:30, 62.87it/s]"
+      "  0%|          | 7/1948 [00:00<00:31, 61.90it/s]"
      ]
     },
     {
@@ -5002,7 +5002,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  2%|▏         | 48/1948 [00:00<00:35, 53.07it/s]"
+      "  2%|▏         | 44/1948 [00:00<00:36, 51.89it/s]"
      ]
     },
     {
@@ -5017,7 +5017,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  7%|▋         | 131/1948 [00:02<00:35, 51.08it/s]"
+      "  7%|▋         | 131/1948 [00:02<00:40, 45.27it/s]"
      ]
     },
     {
@@ -5031,7 +5031,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  9%|▊         | 169/1948 [00:03<00:34, 51.67it/s]"
+      "  9%|▊         | 168/1948 [00:03<00:34, 51.68it/s]"
      ]
     },
     {
@@ -5046,7 +5046,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 13%|█▎        | 244/1948 [00:04<00:32, 51.81it/s]"
+      " 13%|█▎        | 245/1948 [00:05<00:34, 48.85it/s]"
      ]
     },
     {
@@ -5060,7 +5060,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 14%|█▍        | 269/1948 [00:05<00:31, 53.74it/s]"
+      " 14%|█▍        | 273/1948 [00:05<00:32, 51.14it/s]"
      ]
     },
     {
@@ -5074,7 +5074,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 15%|█▌        | 294/1948 [00:05<00:29, 56.09it/s]"
+      " 15%|█▌        | 298/1948 [00:06<00:30, 54.17it/s]"
      ]
     },
     {
@@ -5089,7 +5089,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 16%|█▋        | 319/1948 [00:06<00:29, 54.89it/s]"
+      " 17%|█▋        | 322/1948 [00:06<00:31, 52.37it/s]"
      ]
     },
     {
@@ -5103,7 +5103,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 17%|█▋        | 337/1948 [00:06<00:29, 54.76it/s]"
+      " 17%|█▋        | 334/1948 [00:06<00:31, 50.47it/s]"
      ]
     },
     {
@@ -5117,7 +5117,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 18%|█▊        | 349/1948 [00:06<00:29, 54.60it/s]"
+      " 18%|█▊        | 352/1948 [00:07<00:32, 49.77it/s]"
      ]
     },
     {
@@ -5131,7 +5131,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 20%|██        | 397/1948 [00:07<00:29, 52.54it/s]"
+      " 20%|██        | 392/1948 [00:08<00:29, 52.55it/s]"
      ]
     },
     {
@@ -5145,7 +5145,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 22%|██▏       | 434/1948 [00:08<00:27, 54.66it/s]"
+      " 22%|██▏       | 434/1948 [00:08<00:28, 53.35it/s]"
      ]
     },
     {
@@ -5159,7 +5159,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 24%|██▍       | 471/1948 [00:09<00:27, 54.24it/s]"
+      " 24%|██▍       | 475/1948 [00:09<00:27, 54.04it/s]"
      ]
     },
     {
@@ -5174,7 +5174,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 28%|██▊       | 550/1948 [00:10<00:25, 55.81it/s]"
+      " 28%|██▊       | 545/1948 [00:11<00:27, 50.62it/s]"
      ]
     },
     {
@@ -5188,7 +5188,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 30%|███       | 587/1948 [00:11<00:24, 56.45it/s]"
+      " 30%|███       | 586/1948 [00:12<00:32, 41.52it/s]"
      ]
     },
     {
@@ -5203,7 +5203,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 31%|███▏      | 613/1948 [00:11<00:22, 60.53it/s]"
+      " 31%|███▏      | 613/1948 [00:13<00:24, 55.49it/s]"
      ]
     },
     {
@@ -5220,7 +5220,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 34%|███▎      | 657/1948 [00:12<00:22, 56.81it/s]"
+      " 34%|███▎      | 656/1948 [00:14<00:23, 55.45it/s]"
      ]
     },
     {
@@ -5235,7 +5235,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 35%|███▍      | 678/1948 [00:12<00:21, 59.22it/s]"
+      " 35%|███▍      | 676/1948 [00:14<00:21, 59.38it/s]"
      ]
     },
     {
@@ -5251,7 +5251,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 36%|███▌      | 703/1948 [00:13<00:23, 53.59it/s]"
+      " 36%|███▌      | 700/1948 [00:14<00:24, 51.03it/s]"
      ]
     },
     {
@@ -5265,7 +5265,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 38%|███▊      | 742/1948 [00:14<00:20, 59.62it/s]"
+      " 38%|███▊      | 736/1948 [00:15<00:24, 49.97it/s]"
      ]
     },
     {
@@ -5281,7 +5281,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 39%|███▉      | 761/1948 [00:14<00:20, 57.55it/s]"
+      " 39%|███▉      | 756/1948 [00:15<00:21, 55.30it/s]"
      ]
     },
     {
@@ -5295,7 +5295,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 41%|████▏     | 804/1948 [00:15<00:20, 54.78it/s]"
+      " 41%|████▏     | 807/1948 [00:16<00:23, 49.05it/s]"
      ]
     },
     {
@@ -5309,7 +5309,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 43%|████▎     | 829/1948 [00:15<00:20, 54.73it/s]"
+      " 43%|████▎     | 834/1948 [00:17<00:21, 50.70it/s]"
      ]
     },
     {
@@ -5323,7 +5323,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 44%|████▍     | 855/1948 [00:16<00:18, 59.49it/s]"
+      " 44%|████▍     | 854/1948 [00:17<00:18, 58.33it/s]"
      ]
     },
     {
@@ -5340,7 +5340,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 49%|████▊     | 947/1948 [00:17<00:18, 55.28it/s]"
+      " 49%|████▉     | 951/1948 [00:19<00:18, 53.05it/s]"
      ]
     },
     {
@@ -5355,7 +5355,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 53%|█████▎    | 1032/1948 [00:20<00:47, 19.12it/s]"
+      " 53%|█████▎    | 1036/1948 [00:21<00:17, 53.53it/s]"
      ]
     },
     {
@@ -5369,7 +5369,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 56%|█████▌    | 1086/1948 [00:21<00:16, 50.73it/s]"
+      " 56%|█████▌    | 1085/1948 [00:22<00:15, 54.98it/s]"
      ]
     },
     {
@@ -5383,7 +5383,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 59%|█████▉    | 1147/1948 [00:22<00:14, 54.71it/s]"
+      " 59%|█████▉    | 1145/1948 [00:23<00:15, 53.24it/s]"
      ]
     },
     {
@@ -5398,7 +5398,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 61%|██████    | 1190/1948 [00:23<00:14, 54.13it/s]"
+      " 61%|██████    | 1189/1948 [00:24<00:13, 54.42it/s]"
      ]
     },
     {
@@ -5412,7 +5412,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 63%|██████▎   | 1224/1948 [00:23<00:13, 51.75it/s]"
+      " 63%|██████▎   | 1220/1948 [00:24<00:13, 54.20it/s]"
      ]
     },
     {
@@ -5426,7 +5426,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 64%|██████▍   | 1255/1948 [00:24<00:13, 53.05it/s]"
+      " 64%|██████▍   | 1250/1948 [00:25<00:13, 52.33it/s]"
      ]
     },
     {
@@ -5440,7 +5440,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 65%|██████▌   | 1268/1948 [00:24<00:12, 55.52it/s]"
+      " 65%|██████▌   | 1269/1948 [00:25<00:12, 54.95it/s]"
      ]
     },
     {
@@ -5455,7 +5455,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 66%|██████▌   | 1286/1948 [00:24<00:12, 54.95it/s]"
+      " 66%|██████▌   | 1281/1948 [00:26<00:12, 55.43it/s]"
      ]
     },
     {
@@ -5469,14 +5469,27 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 68%|██████▊   | 1323/1948 [00:25<00:11, 55.34it/s]"
+      " 68%|██████▊   | 1318/1948 [00:26<00:11, 55.69it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[WARN] No label for: ../data/cropped/train/aug_train677_plate3.jpg\n",
+      "[WARN] No label for: ../data/cropped/train/aug_train677_plate3.jpg\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 68%|██████▊   | 1330/1948 [00:26<00:11, 52.68it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "[WARN] No label for: ../data/cropped/train/aug_train682_plate2.jpg\n"
      ]
     },
@@ -5484,7 +5497,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 69%|██████▉   | 1348/1948 [00:26<00:11, 54.03it/s]"
+      " 69%|██████▉   | 1348/1948 [00:27<00:11, 50.96it/s]"
      ]
     },
     {
@@ -5498,7 +5511,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 71%|███████   | 1374/1948 [00:26<00:11, 51.18it/s]"
+      " 70%|███████   | 1371/1948 [00:27<00:11, 48.52it/s]"
      ]
     },
     {
@@ -5513,7 +5526,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 72%|███████▏  | 1400/1948 [00:27<00:09, 55.72it/s]"
+      " 72%|███████▏  | 1402/1948 [00:28<00:09, 55.01it/s]"
      ]
     },
     {
@@ -5528,7 +5541,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 73%|███████▎  | 1419/1948 [00:27<00:09, 55.94it/s]"
+      " 73%|███████▎  | 1415/1948 [00:28<00:09, 55.24it/s]"
      ]
     },
     {
@@ -5543,7 +5556,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 75%|███████▌  | 1467/1948 [00:28<00:09, 51.74it/s]"
+      " 75%|███████▌  | 1468/1948 [00:29<00:09, 52.13it/s]"
      ]
     },
     {
@@ -5557,7 +5570,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 76%|███████▋  | 1486/1948 [00:28<00:08, 55.68it/s]"
+      " 76%|███████▋  | 1488/1948 [00:30<00:07, 57.75it/s]"
      ]
     },
     {
@@ -5573,7 +5586,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 77%|███████▋  | 1506/1948 [00:28<00:07, 58.74it/s]"
+      " 77%|███████▋  | 1508/1948 [00:30<00:07, 59.09it/s]"
      ]
     },
     {
@@ -5589,7 +5602,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 78%|███████▊  | 1524/1948 [00:29<00:07, 56.16it/s]"
+      " 78%|███████▊  | 1526/1948 [00:30<00:07, 55.47it/s]"
      ]
     },
     {
@@ -5603,7 +5616,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 80%|███████▉  | 1549/1948 [00:29<00:07, 55.77it/s]"
+      " 80%|███████▉  | 1549/1948 [00:31<00:09, 43.42it/s]"
      ]
     },
     {
@@ -5617,7 +5630,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 81%|████████  | 1580/1948 [00:30<00:06, 52.77it/s]"
+      " 81%|████████  | 1580/1948 [00:31<00:07, 46.44it/s]"
      ]
     },
     {
@@ -5631,7 +5644,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 82%|████████▏ | 1602/1948 [00:30<00:07, 47.47it/s]"
+      " 82%|████████▏ | 1603/1948 [00:32<00:06, 53.62it/s]"
      ]
     },
     {
@@ -5645,7 +5658,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 86%|████████▌ | 1677/1948 [00:32<00:05, 52.48it/s]"
+      " 86%|████████▌ | 1675/1948 [00:33<00:05, 51.55it/s]"
      ]
     },
     {
@@ -5660,7 +5673,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 87%|████████▋ | 1695/1948 [00:32<00:04, 53.03it/s]"
+      " 87%|████████▋ | 1695/1948 [00:34<00:04, 54.94it/s]"
      ]
     },
     {
@@ -5674,7 +5687,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 88%|████████▊ | 1713/1948 [00:33<00:04, 51.08it/s]"
+      " 88%|████████▊ | 1714/1948 [00:34<00:04, 55.52it/s]"
      ]
     },
     {
@@ -5688,7 +5701,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 89%|████████▉ | 1740/1948 [00:33<00:04, 51.25it/s]"
+      " 90%|████████▉ | 1745/1948 [00:35<00:03, 55.27it/s]"
      ]
     },
     {
@@ -5696,20 +5709,7 @@
      "output_type": "stream",
      "text": [
       "[WARN] No label for: ../data/cropped/val/aug_val091_plate3.jpg\n",
-      "[WARN] No label for: ../data/cropped/val/aug_val096_plate2.jpg\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 90%|████████▉ | 1753/1948 [00:33<00:03, 54.45it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "[WARN] No label for: ../data/cropped/val/aug_val096_plate2.jpg\n",
       "[WARN] No label for: ../data/cropped/val/aug_val098_plate3.jpg\n"
      ]
     },
@@ -5717,7 +5717,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 92%|█████████▏| 1795/1948 [00:34<00:02, 52.68it/s]"
+      " 92%|█████████▏| 1793/1948 [00:36<00:02, 51.74it/s]"
      ]
     },
     {
@@ -5731,7 +5731,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 94%|█████████▍| 1837/1948 [00:35<00:02, 54.86it/s]"
+      " 94%|█████████▍| 1837/1948 [00:36<00:02, 55.26it/s]"
      ]
     },
     {
@@ -5746,7 +5746,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 95%|█████████▌| 1856/1948 [00:35<00:01, 53.33it/s]"
+      " 95%|█████████▌| 1856/1948 [00:37<00:01, 56.64it/s]"
      ]
     },
     {
@@ -5761,7 +5761,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 97%|█████████▋| 1893/1948 [00:36<00:01, 54.84it/s]"
+      " 97%|█████████▋| 1892/1948 [00:37<00:01, 52.47it/s]"
      ]
     },
     {
@@ -5775,7 +5775,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 98%|█████████▊| 1907/1948 [00:36<00:00, 57.02it/s]"
+      " 98%|█████████▊| 1905/1948 [00:38<00:00, 53.71it/s]"
      ]
     },
     {
@@ -5790,7 +5790,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████▉| 1943/1948 [00:37<00:00, 54.72it/s]"
+      "100%|█████████▉| 1944/1948 [00:38<00:00, 51.72it/s]"
      ]
     },
     {
@@ -5805,7 +5805,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1948/1948 [00:37<00:00, 51.96it/s]\n"
+      "100%|██████████| 1948/1948 [00:39<00:00, 49.94it/s]\n"
      ]
     },
     {
@@ -5814,8 +5814,8 @@
      "text": [
       "==========================================\n",
       " OCR Evaluation on CROPPED dataset\n",
-      " Total samples: 1859\n",
-      " Final CER: 0.9869531516627429\n",
+      " Total samples: 3718\n",
+      " Final CER: 0.9928851148504428\n",
       "==========================================\n"
      ]
     }
